# panim-loader

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
assets/: multi_anim.blend  multi_anim.panim  single_anim.blend  single_anim.panim
src/: errors.rs  lib.rs  parser.rs
